Assignment 3(with media query)

--- a/style.css
+++ b/style.css
@@ -84,3 +84,87 @@ table,td,th{
   border-color: white;
   border-style:solid;
 }
+body {
+  background: url("likhon.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.Main{background-color: rgba(0, 0, 0, 0.7);
+  color: White ;
+  padding: 10px;
+  height: 400px;
+  width: 500px;
+  margin: 100px auto;}
+
+  .object{
+  background-color: rgba(0, 0, 0, 0.7);
+  color: White ;
+  padding: 40px;
+  height: auto;
+  width: 500px;
+  margin: 100px auto;
+}
+.Acamdemic{
+  background-color: rgba(0, 0, 0, 0.7);
+ color: White ;
+ padding: 40px;
+ height: auto;
+ width: 550px;
+ margin: 100px auto;
+}
+.skill{
+  background-color: rgba(0, 0, 0, 0.7);
+   color: White ;
+   padding: 40px;
+   height: auto;
+   width: 500px;
+   margin: 100px auto;
+}
+
+.personal{
+
+  background-color: rgba(0, 0, 0, 0.7);
+   color: White ;
+   padding: 40px;
+   height: auto;
+   width: 500px;
+   margin: 100px auto;
+}
+.Additional{
+  background-color: rgba(0, 0, 0, 0.7);
+   color:White ;
+   padding: 20px;
+   height: auto;
+   width: 500px;
+   margin: 100px auto;
+}
+
+head{
+}
+
+@media (max-width: 860px) and (min-width: 576px) {
+   hr {
+    background-color: #000000;
+   }
+}
+
+@media (max-width: 270px) and (min-width: 0px) {
+   hr {
+    background-color: #00ff00;
+   }
+}
+
+@media (max-width: 1170px) and (min-width: 970px) {
+   hr {
+    background-color: #cc0000;
+   }
+}
+
+@media (max-width: 50000px) and (min-width: 1170px) {
+   hr {
+    background-color: #00ff00;
+   }
+}
